trino/test/corpus/explain.txt
================================================================================
Trino: EXPLAIN basic
================================================================================

EXPLAIN SELECT * FROM t;

--------------------------------------------------------------------------------

(program
  (statement
    (keyword_explain)
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Trino: EXPLAIN with TYPE LOGICAL
================================================================================

EXPLAIN (TYPE LOGICAL) SELECT * FROM t;

--------------------------------------------------------------------------------

(program
  (statement
    (keyword_explain)
    (explain_options
      (keyword_type)
      (keyword_logical))
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Trino: EXPLAIN with TYPE and FORMAT
================================================================================

EXPLAIN (TYPE DISTRIBUTED, FORMAT JSON) SELECT id FROM orders;

--------------------------------------------------------------------------------

(program
  (statement
    (keyword_explain)
    (explain_options
      (keyword_type)
      (keyword_distributed)
      (keyword_format)
      (keyword_json))
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))
